Closed
Bug 398896
Opened 18 years ago
Closed 18 years ago
New history search hang since 6 Sep 2007
Categories
(Firefox :: Bookmarks & History, defect)
Tracking
()
VERIFIED
FIXED
Firefox 3 beta1
People
(Reporter: ria.klaassen, Assigned: dietrich)
References
Details
(Keywords: hang, perf, regression)
Attachments
(1 file)
|
4.81 KB,
patch
|
moco
:
review+
|
Details | Diff | Splinter Review |
Steps to reproduce:
- Create a new profile and paste a places.sqlite in it (if it doesn't succeed with your own places.sqlite I have a specially created example that could be used for this goal)
- Open history sidebar (use default View setting = By Date) and do a search for the word "bonsai". There should be 4 entries in it
Behaviour before 6 Sep: it finds the 4 entries within 1 or 2 seconds.
Current behaviour: it hangs. After one minute I force closed Firefox.
Regression range for this is http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=1189117620&maxdate=1189120379
So I think it is caused by by bug 393464.
| Reporter | ||
Comment 1•18 years ago
|
||
A test on my husband's vista computer proved that the bug also occurs on faster systems, but less obvious (7 seconds, CPU 75%).
| Assignee | ||
Comment 2•18 years ago
|
||
Ria, this was backed out for 5 days, can you see if you can reproduce during that period?
1.170 mozilla.mano%sent.com 2007-09-15 12:53 Bug 393464 - Re-landing tag-search so search-in-folders (bug 384228) and related work could get the same sort of love. patch by dietrich, r=sspitzer, a=mconnor.
1.169 dietrich%mozilla.com 2007-09-10 11:08 Bug 393464 Bookmarks manager doesn't search in tags field (reverting)
| Reporter | ||
Comment 3•18 years ago
|
||
I tested a 11 Sep 2007 build and indeed, no problem.
| Assignee | ||
Comment 4•18 years ago
|
||
ok Ria, thanks for checking.
Assignee: nobody → dietrich
Flags: blocking-firefox3?
Target Milestone: --- → Firefox 3 M9
| Assignee | ||
Comment 5•18 years ago
|
||
go directly to db. nsNavHistory::URIHasTag() went from 4-6ms to <1ms in my tests. this change is covered by the unit tests for bug 395101, and those still pass w/ this patch.
http://mxr.mozilla.org/seamonkey/source/toolkit/components/places/tests/bookmarks/test_395101.js
Attachment #283965 -
Flags: review?(sspitzer)
Updated•18 years ago
|
Flags: blocking-firefox3? → blocking-firefox3+
Comment 6•18 years ago
|
||
Comment on attachment 283965 [details] [diff] [review]
fix
r=sspitzer
Attachment #283965 -
Flags: review?(sspitzer) → review+
| Assignee | ||
Comment 7•18 years ago
|
||
Checking in toolkit/components/places/src/nsNavHistory.cpp;
/cvsroot/mozilla/toolkit/components/places/src/nsNavHistory.cpp,v <-- nsNavHistory.cpp
new revision: 1.176; previous revision: 1.175
done
Checking in toolkit/components/places/src/nsNavHistory.h;
/cvsroot/mozilla/toolkit/components/places/src/nsNavHistory.h,v <-- nsNavHistory.h
new revision: 1.106; previous revision: 1.105
done
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
| Reporter | ||
Updated•18 years ago
|
Status: RESOLVED → VERIFIED
Comment 8•16 years ago
|
||
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".
In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body contains places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.
Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.
Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•