Bug 398896  New history search hang since 6 Sep 2007 (r=sspitzer)